# luxin-candong001

./: .gitignore  AGENTS.md  README.md  UPLOAD_GUIDE.md  pyproject.toml
data/: README.md  buildings.json  events.json  laws.json  manifest.json  survival.json  technologies.json
docs/: INDEX.md  PENDING.md
docs/control/: 《炉心残冬》v1 全局修正登记【覆盖版】.md  《炉心残冬》全局修正总控正文【代码窗前置必读】.md  《炉心残冬》六轮文案资产表全局总收口  最终终审.md  《炉心残冬》后续数值表全局修正：升级即时完成与森林区  伐木场命名边界.md  《炉心残冬》干净全局解锁索引表：炉律  科技 → 建筑  动作  模式.md  《炉心残冬》干净总收口：七批数值补表代码窗  测试窗交付清单.md  《炉心残冬》机制覆盖规则：第2猎区与 woodfuel v2【完整覆盖版】.md  全局小修v2 使用说明【覆盖版】.md
docs/deprecated/: README.md
docs/handoff/: PATCH-000：仓库初始化与施工规则验证.md  PATCH-001：实现记录.md  PATCH-001：项目骨架、数据状态与文案注册系统.md  PATCH-002：日结主流程实现记录.md  PATCH-003：人口资源食物住房炉心基础实现记录.md  PATCH-004：建筑建造升级供热与应急燃料实现记录.md  PATCH-005：006A炉律配给工时医疗与死亡处理实现记录.md  PATCH-006：006B科技研究与过载实现记录.md  PATCH-007：事件承诺固定增员实现记录.md  PENDING 登记.md  《炉心残冬》010 代码骨架输入清单 v0.md  《炉心残冬》Codex 项目规则.md  代码窗的.md  第一次给codex指令.md
docs/numeric/: 《炉心残冬》第一批干净数值补表：前 3 天与基础循环.md  《炉心残冬》第七批干净数值补表：第七霜落与终局评分.md  《炉心残冬》第三批干净数值补表：006B 工程科技树成本  研究天数.md  《炉心残冬》第二批干净数值补表：D4～D14 初期扩张与基础建筑.md  《炉心残冬》第五批干净数值补表：007 事件  承诺  固定增员.md  《炉心残冬》第六批干净数值补表：旧城派与 006C 接口.md  《炉心残冬》第四批干净数值补表：建筑升级与中期生产链.md
docs/text-assets/: 第 1 轮 命名规则  UI  面板氛围  资源  状态  天气  基础命令.md  (+5 more)
tests/: __init__.py  test_buildings.py  test_cli.py  test_config_loader.py  test_config_validator.py  test_end_day.py  test_events.py  test_laws.py  test_machine_interface.py  test_repository_docs.py  test_state_and_save.py  test_survival.py  test_technologies.py  test_text_registry.py
(+65 files in other folders)
